tests/baselines/reference/ClassDeclaration26.errors.txt
tests/cases/compiler/ClassDeclaration26.ts(2,18): error TS1440: Variable declaration not allowed at this location.
tests/cases/compiler/ClassDeclaration26.ts(4,5): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/compiler/ClassDeclaration26.ts(4,20): error TS1005: ',' expected.
tests/cases/compiler/ClassDeclaration26.ts(4,23): error TS1005: '=>' expected.
tests/cases/compiler/ClassDeclaration26.ts(5,1): error TS1128: Declaration or statement expected.


==== tests/cases/compiler/ClassDeclaration26.ts (5 errors) ====
    class C {
        public const var export foo = 10;
                     ~~~
!!! error TS1440: Variable declaration not allowed at this location.
    
        var constructor() { }
        ~~~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                       ~
!!! error TS1005: ',' expected.
                          ~
!!! error TS1005: '=>' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.